--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -29228,7 +29228,6 @@ comments</property>
                                               <widget class="GtkAlignment" id="alignment1">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
-                                                <property name="bottom_padding">8</property>
                                                 <child>
                                                   <widget class="GtkVBox" id="vbox_d">
                                                     <property name="visible">True</property>
@@ -29297,29 +29296,25 @@ comments</property>
                                                       </packing>
                                                     </child>
                                                     <child>
-                                                      <widget class="GtkHBox" id="hbox_list_d">
+                                                      <widget class="GtkAlignment" id="alignment5">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
-                                                        <property name="spacing">4</property>
+                                                        <property name="left_padding">12</property>
                                                         <child>
-                                                          <placeholder/>
+                                                          <widget class="GtkHBox" id="hbox_list_d">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="spacing">4</property>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                          </widget>
                                                         </child>
                                                       </widget>
                                                       <packing>
                                                         <property name="expand">True</property>
                                                         <property name="fill">True</property>
                                                         <property name="position">2</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkHSeparator" id="hseparator1">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="expand">False</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="position">3</property>
                                                       </packing>
                                                     </child>
                                                   </widget>
