--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -29687,8 +29687,10 @@ to the center of the loads.</property>
                                                   <widget class="GtkLabel" id="label23">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
+                                                    <property name="tooltip" translatable="yes">Machine speed / Person speed ratio.
+Eg. value = 2, means person does twice force at half speed.</property>
                                                     <property name="xalign">0</property>
-                                                    <property name="label" translatable="yes">Multiplied</property>
+                                                    <property name="label" translatable="yes">Force multiplier</property>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -29703,7 +29705,6 @@ to the center of the loads.</property>
                                                     <property name="items">4
 3
 2
-1
 1/2
 1/3
 1/4</property>
