Fixed 763958. Doubt on string "Active discarding first port"

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1096,7 +1096,7 @@
                                     </child>
                                     <child>
                                       <widget class="GtkRadioButton" id="radio_autodetect_discard_first">
-                                        <property name="label" translatable="yes">Active discarding first port</property>
+                                        <property name="label" translatable="yes">Active, discarding first port</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">False</property>
